@@ -1,5 +1,3 @@
-package org.greenbuttonalliance.gbaresourceserver.usage.web.controller;
-
 /*
  * Copyright (c) 2022 Green Button Alliance, Inc.
  *
@@ -16,28 +14,26 @@ package org.greenbuttonalliance.gbaresourceserver.usage.web.controller;
  *  limitations under the License.
  */
 
+package org.greenbuttonalliance.gbaresourceserver.usage.web.controller;
+
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.greenbuttonalliance.gbaresourceserver.usage.model.ApplicationInformation;
 import org.greenbuttonalliance.gbaresourceserver.usage.service.ApplicationInformationService;
 import org.greenbuttonalliance.gbaresourceserver.usage.web.controller.exception.EntityNotFoundByIdException;
+import org.greenbuttonalliance.gbaresourceserver.usage.web.dto.IdentifiedObjectDto;
 import org.greenbuttonalliance.gbaresourceserver.usage.web.dto.ApplicationInformationDto;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
 @RestController
 @Transactional
+@Slf4j
 @RequestMapping(path = "/espi/1_1/resource/ApplicationInformation", produces = MediaType.APPLICATION_ATOM_XML_VALUE)
 @ResponseStatus(HttpStatus.OK)
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
@@ -45,15 +41,27 @@ public class ApplicationInformationController {
 	private final ApplicationInformationService applicationInformationService;
 
 	@GetMapping
-	public List<ApplicationInformationDto> getAll() {
-		return applicationInformationService.findAll().stream()
-			.map(ApplicationInformationDto::fromApplicationInformation)
-			.collect(Collectors.toList());
+	public String getAll() {
+		List<ApplicationInformationDto> listApplicationInformationDto = applicationInformationService.findAll().stream()
+			.map(ApplicationInformationDto::fromApplicationInformation).toList();
+
+		StringBuilder contentSB = new StringBuilder();
+
+		for(ApplicationInformationDto applicationInformationDto : listApplicationInformationDto) {
+			String content = applicationInformationDto.getContent();
+			contentSB.append(applicationInformationDto.addEntryWrapper("ApplicationInformation", content));
+		}
+		return IdentifiedObjectDto.addParentWrapper(contentSB.toString(), "ApplicationInformation");
 	}
 
 	@GetMapping("/{uuid}")
-	public ApplicationInformationDto getByUuid(@PathVariable UUID uuid) {
-		ApplicationInformation applicationInformation = ApplicationInformationService.findByUuid(uuid).orElseThrow(() -> new EntityNotFoundByIdException(ApplicationInformation.class, uuid));
-		return ApplicationInformationDto.fromApplicationInformation(applicationInformation);
+	public String getByUuid(@PathVariable UUID uuid) {
+
+		ApplicationInformation applicationInformation = applicationInformationService.findByUuid(uuid).orElseThrow(() -> new EntityNotFoundByIdException(ApplicationInformation.class, uuid));
+		ApplicationInformationDto singleApplicationInformationDto = ApplicationInformationDto.fromApplicationInformation(applicationInformation);
+
+		String content = singleApplicationInformationDto.getContent();
+
+		return singleApplicationInformationDto.addEntryWrapper("ApplicationInformation", content);
 	}
 }
